--- a/public/static/plugin/layui-extend/css/admin.css
+++ b/public/static/plugin/layui-extend/css/admin.css
@@ -1152,6 +1152,9 @@ div.layui-layer.layui-layer-msg{
     right: 15px;
 }
 
+.layui-form-item{
+    margin-bottom: 24px;
+}
 /* popup 表单按钮组 end */
 
 .prompt-pop-table {
@@ -1170,4 +1173,12 @@ div.layui-layer.layui-layer-msg{
 .input-focus{
     border-color: var(--td-brand-color) !important;
     box-shadow: 0 0 0 2px var(--td-brand-color-focus);
+}
+
+.form-item-msg{
+    position: absolute;
+    font-size: 12px;
+}
+.is-error{
+    color: #c9353f;
 }
