--- a/app/admin/view/administrator/permission/add.html
+++ b/app/admin/view/administrator/permission/add.html
@@ -81,15 +81,11 @@
 
         elems.form.verify({
             title:{
-                verify:function (value,item) {
-                    console.log(1111);
-                },
+                verify:'required',
                 error:'参数不能为空'
             },
             path:{
-                verify:function (value,item) {
-                    console.log(1111);
-                },
+                verify:'required',
                 error:'参数不能为空'
             }
         })
