--- a/app/admin/view/develop/icon/index.html
+++ b/app/admin/view/develop/icon/index.html
@@ -1,7 +1,7 @@
 {extend name="basic/page_layout" /}
 
 {block name="head"}
-<link rel="stylesheet" href="/static/admin/font-awesome/css/font-awesome.min.css">
+<link rel="stylesheet" href="__FONT_AWESOME_CSS__">
 <style>
     .layui-icon-view{
         display: flex;
@@ -76,8 +76,8 @@
 </div>
 
 <!-- 引入 layui.js 的 <script> 标签最好放置在 html 末尾 -->
-<script src="/static/admin/layui/layui.all.js"></script>
-<script src="/static/admin/config.js"></script>
+<script src="__LAYUI_JS__"></script>
+<script src="__LAYUI_CONFIG__"></script>
 <script>
     layui.use(['element','jquery','request'],function () {
         let $ = layui.jquery,request = layui.request,element = layui.element;
