--- a/app/admin/view/index/index.html
+++ b/app/admin/view/index/index.html
@@ -7,6 +7,8 @@
     <title>layui-tdesign Admin</title>
     <link rel="stylesheet" href="__LAYUI_CSS__">
     <link rel="stylesheet" href="__FONT_AWESOME_CSS__">
+    <!--  主题样式  -->
+    <link rel="stylesheet" href="__ADMIN_THEME_CSS__">
 </head>
 <body>
 
@@ -73,7 +75,6 @@
             url:'{:url("menu")}'
         })
         admin.open('{:url("home")}','<i class="layui-icon layui-icon-home"></i>',0)
-
     });
 </script>
 </body>
