# 静态资源配置修改

--- a/app/admin/view/administrator/permission/add.html
+++ b/app/admin/view/administrator/permission/add.html
@@ -73,7 +73,7 @@
     </form>
 </div>
 <!-- 引入 layui.js 的 <script> 标签最好放置在 html 末尾 -->
-<script src="__LAYUI_STATIC__/layui.all.js"></script>
+<script src="__LAYUI_JS__"></script>
 <script src="__LAYUI_CONFIG__"></script>
 <script>
     layui.use(['form','element','icon','jquery','request','elems'],function () {
