--- a/app/admin/view/administrator/permission/index.html
+++ b/app/admin/view/administrator/permission/index.html
@@ -57,8 +57,8 @@
 
 
 <!-- 引入 layui.js 的 <script> 标签最好放置在 html 末尾 -->
-<script src="__LAYUI_STATIC__/layui.all.js"></script>
-<script src="__LAYUI_STATIC__/config.js"></script>
+<script src="__LAYUI_JS__"></script>
+<script src="__LAYUI_CONFIG__"></script>
 <script>
     layui.use(['table','form','jquery','treetable','loading','request'],function () {
         let table = layui.table;
