# icon 选择样式调整

--- a/app/admin/view/administrator/permission/add.html
+++ b/app/admin/view/administrator/permission/add.html
@@ -42,7 +42,7 @@
             <label for="" class="layui-form-label">图标</label>
             <div class="layui-input-block" style="width: unset">
                 <input type="text" id="iconPicker2" name="icon" lay-filter="iconPicker2" class="hide">
-                <span class="layui-btn layui-btn-primary" id="clear">清空</span>
+                <span class="layui-btn layui-btn-primary layui-inline" id="clear">清空</span>
             </div>
         </div>
         <div class="layui-form-item">
