--- a/app/admin/view/administrator/permission/index.html
+++ b/app/admin/view/administrator/permission/index.html
@@ -141,8 +141,8 @@
                 type: 2,
                 title: '修改',
                 shade: 0.1,
-                area: ['450px', '500px'],
-                content: '{:url("")}'
+                area: ['700px','670px'],
+                content: '{:url("edit")}?id='+obj.data.id
             });
         }
 
