# radio 按钮组样式

--- a/app/admin/view/administrator/permission/add.html
+++ b/app/admin/view/administrator/permission/add.html
@@ -47,10 +47,10 @@
         </div>
         <div class="layui-form-item">
             <label class="layui-form-label">权限类型：</label>
-            <div class="layui-input-block">
-                <input type="radio" ia-event="group" name="type" value="0" title="目录" checked>
-                <input type="radio" ia-event="group" name="type" value="1" title="菜单">
-                <input type="radio" ia-event="group" name="type" value="2" title="按钮">
+            <div class="layui-input-block radio-btn-group">
+                <input type="radio" name="type" value="0" title="目录" checked>
+                <input type="radio" name="type" value="1" title="菜单">
+                <input type="radio" name="type" value="2" title="按钮">
             </div>
         </div>
         <div class="layui-form-item">
