--- a/app/demo/view/component/select.html
+++ b/app/demo/view/component/select.html
@@ -3,6 +3,8 @@
 {block name="head"}
 <style>
 </style>
+
+<link rel="stylesheet" href="/static/plugin/layui-extend/css/formSelects-v4.css">
 {/block}
 
 {block name="body"}
@@ -16,7 +18,7 @@
                 <div class="layui-form-item">
                     <label class="layui-form-label">单行选择框</label>
                     <div class="layui-input-block">
-                        <select name="interest" lay-filter="aihao">
+                        <select name="interest" lay-filter="aihao" >
                             <option value=""></option>
                             <option value="0">写作</option>
                             <option value="1" selected="">阅读</option>
@@ -26,6 +28,26 @@
                         </select>
                     </div>
                 </div>
+                <div class="layui-form-item">
+                    <label class="layui-form-label">单行选择框</label>
+                    <div class="layui-input-block">
+                        <input class="layui-input" type="text" lay-select-type="form" data-href="{:url('inputTable')}">
+                    </div>
+                </div>
+                <div class="layui-form-item">
+                    <label class="layui-form-label">xm-select</label>
+                    <div class="layui-input-block">
+                        <select name="city" xm-select="select1">
+                            <option value="1" disabled="disabled">北京</option>
+                            <option value="2" selected="selected">上海</option>
+                            <option value="3">广州</option>
+                            <option value="4" selected="selected">深圳</option>
+                            <option value="5">天津</option>
+                        </select>
+                    </div>
+                </div>
+
+
             </form>
         </div>
     </div>
@@ -34,8 +56,12 @@
 <script src="__LAYUI_JS__"></script>
 <script src="__LAYUI_CONFIG__"></script>
 <script>
-    layui.use(['element'], function () {
-        let element = layui.element;
+    layui.use(['element','select','formSelects'], function () {
+        let element = layui.element,formSelects = layui.formSelects;
+
+        formSelects.render('select1', {
+            init: ["1", "2"],               //默认值
+        })
     });
 </script>
 </body>
