# 修改时间选择器样式（隐藏滚动条） dataTable 新增时间范围选择

--- a/app/demo/view/component/data_table.html
+++ b/app/demo/view/component/data_table.html
@@ -135,7 +135,7 @@
         dataTable.render({
             el: "#form_filter",
             form: {
-                lay_filter: 'table-search'
+                lay_filter: 'table-search',
             },
             filter: {
                 fields: [
