--- a/app/demo/view/component/data_table.html
+++ b/app/demo/view/component/data_table.html
@@ -136,6 +136,15 @@
             el: "#form_filter",
             form: {
                 lay_filter: 'table-search',
+                btn:[
+                    {
+                        name:'导出',
+                        lay_filter:'test',
+                        url:'test',
+                        method:'POST',
+                        query:{is_export:1}
+                    }
+                ]
             },
             filter: {
                 fields: [
