--- a/app/demo/view/component/data_table.html
+++ b/app/demo/view/component/data_table.html
@@ -2,42 +2,6 @@
 
 {block name="head"}
 <style>
-
-    .layui-table-form-filter .layui-form-item {
-        margin-bottom: 2px;
-    }
-
-    .layui-table-card {
-        height: unset;
-    }
-
-    .layui-table-form-filter .layui-form-item > .layui-form-pane {
-        width: 690px;
-        margin-right: 0;
-    }
-
-    .layui-table-form-filter .layui-form-item > .layui-form-pane > .layui-form-item {
-        width: 345px;
-    }
-
-    .layui-table-form-filter .layui-form-item > .layui-form-pane > .layui-form-item > .layui-input-inline {
-        width: 232px;
-        margin-right: 0;
-    }
-
-    .layui-table-form-filter .layui-form-item > .layui-input-block {
-        width: 684px;
-    }
-
-    .layui-table-form-filter .layui-form-item > .layui-form-pane > .layui-inline {
-        margin-right: 0;
-    }
-
-    .layui-table-form-card .layui-card-header {
-        line-height: unset;
-        padding-top: 30px;
-    }
-
     body {
         background: #f2f2f2;
     }
@@ -124,6 +88,7 @@
 
 
 
+
 </div>
 <!-- 引入 layui.js 的 <script> 标签最好放置在 html 末尾 -->
 <script src="__LAYUI_JS__"></script>
@@ -199,22 +164,14 @@
                     },
                     {label: '商品信息', field: 'product', type: 'input'},
                     {
+                        label: '下单时间',
+                        field: 'order_time',
+                        type: 'date_range'
+                    },
+                    {
                         label: '订单状态',
                         field: 'order_status',
                         type: 'checkbox',
-                        data: [
-                            {value: '1', title: '待付款'},
-                            {value: '2', title: '已付款'},
-                            {value: '3', title: '待发货'},
-                            {value: '4', title: '已发货'},
-                            {value: '5', title: '已取消'},
-                            {value: '6', title: '已完成'},
-                        ]
-                    },
-                    {
-                        label: '下单时间',
-                        field: 'order_time',
-                        type: 'date_range',
                         data: [
                             {value: '1', title: '待付款'},
                             {value: '2', title: '已付款'},
@@ -254,7 +211,10 @@
                     , {field: 'wealth', width: 135, title: '财富', sort: true}
                 ]]
                 , page: true
-            }
+            },
+            table_action:[
+                {}
+            ]
         })
     });
 </script>
