--- a/app/demo/view/component/data_table.html
+++ b/app/demo/view/component/data_table.html
@@ -5,8 +5,6 @@
     body {
         background: #f2f2f2;
     }
-
-
 </style>
 {/block}
 
@@ -14,80 +12,7 @@
 <body>
 <div class="popup-contain">
 
-    <div class="layui-card layui-table-form-card" id="form_filter">
-        <div class="layui-card-header layui-table-card">
-            <form class="layui-form layui-table-form-filter" lay-filter="table-search" style="width: 800px">
-                <div class="layui-form-item">
-                    <label class="layui-form-label">用户信息</label>
-                    <div class="layui-inline layui-form-item layui-form-pane">
-                        <div class="layui-inline layui-form-item">
-                            <label class="layui-form-label">用户名</label>
-                            <div class="layui-input-inline">
-                                <input type="text" name="username" autocomplete="off" class="layui-input">
-                            </div>
-                        </div>
-                        <div class="layui-inline layui-form-item">
-                            <label class="layui-form-label">手机号</label>
-                            <div class="layui-input-inline">
-                                <input type="text" name="phone" autocomplete="off" class="layui-input">
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="layui-form-item">
-                    <label class="layui-form-label">订单信息</label>
-                    <div class="layui-inline layui-form-item layui-form-pane">
-                        <div class="layui-inline layui-form-item">
-                            <label class="layui-form-label">订单编号</label>
-                            <div class="layui-input-inline">
-                                <input type="text" name="order_sn" autocomplete="off" class="layui-input">
-                            </div>
-                        </div>
-                        <div class="layui-inline layui-form-item">
-                            <label class="layui-form-label">订单ID</label>
-                            <div class="layui-input-inline">
-                                <input type="text" name="order_id" autocomplete="off" class="layui-input">
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="layui-form-item">
-                    <label class="layui-form-label">商品信息</label>
-                    <div class="layui-input-block">
-                        <input type="text" name="product" autocomplete="off" class="layui-input">
-                    </div>
-                </div>
-                <div class="layui-form-item" pane="">
-                    <label class="layui-form-label">订单状态</label>
-                    <div class="layui-input-block" pane="">
-                        <input type="checkbox" name="order_status[write]" lay-skin="primary" title="全部" checked="">
-                        <input type="checkbox" name="order_status[read]" lay-skin="primary" title="待付款">
-                        <input type="checkbox" name="order_status[read]" lay-skin="primary" title="已付款">
-                        <input type="checkbox" name="order_status[read]" lay-skin="primary" title="待发货">
-                        <input type="checkbox" name="order_status[read]" lay-skin="primary" title="已发货">
-                        <input type="checkbox" name="order_status[read]" lay-skin="primary" title="已取消">
-                        <input type="checkbox" name="order_status[read]" lay-skin="primary" title="已完成">
-                    </div>
-                </div>
-                <div class="layui-form-item" pane="">
-                    <label class="layui-form-label"></label>
-                    <div class="layui-input-block">
-                        <div class="layui-inline">
-                            <button class="layui-btn" type="reset">重置</button>
-                            <button class="layui-btn layui-btn-primary" lay-submit>搜索</button>
-                        </div>
-                    </div>
-                </div>
-
-            </form>
-        </div>
-        <div class="layui-card-body">
-            <table class="layui-hide" id="test"></table>
-        </div>
-    </div>
-
-
-
+    <div class="layui-card layui-table-form-card" id="form_filter"></div>
 
 </div>
 <!-- 引入 layui.js 的 <script> 标签最好放置在 html 末尾 -->
